toolkit/xre/nsAppRunner.cpp
@@ -3313,8 +3313,6 @@ XREMain::XRE_mainStartup(bool* aExitFlag)
     PR_fprintf(PR_STDERR, "Error: cannot open display: %s\n", display_name);
     return 1;
   }
-  gdk_display_manager_set_default_display (gdk_display_manager_get(),
-                                           mGdkDisplay);
   if (GDK_IS_X11_DISPLAY(mGdkDisplay)) {
     if (saveDisplayArg) {
       SaveWordToEnv("DISPLAY", nsDependentCString(display_name));
